[gd_scene load_steps=3 format=3 uid="uid://cuxa3on8jifhx"]

[ext_resource type="Script" path="res://OptionsMenu.gd" id="1_x2vss"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_247g3"]
load_path = "res://.godot/imported/options 2.png-e1eaa494e127aa3ffb342617ada30afe.ctex"

[node name="OptionsMenu" type="Node2D"]
script = ExtResource("1_x2vss")

[node name="Background" type="Sprite2D" parent="."]
texture = SubResource("CompressedTexture2D_247g3")
offset = Vector2(960, 540)

[node name="VolumeMusic" type="Label" parent="Background"]
offset_left = 449.0
offset_top = 387.0
offset_right = 637.0
offset_bottom = 410.0
text = "Volume musique"
metadata/_edit_use_anchors_ = true

[node name="VolumeMusicBar" type="HSlider" parent="Background"]
offset_left = 449.0
offset_top = 420.0
offset_right = 640.0
offset_bottom = 436.0
size_flags_vertical = 1
mouse_filter = 1
mouse_force_pass_scroll_events = false
value = 100.0
rounded = true
metadata/_edit_use_anchors_ = true

[node name="VolumeClick" type="Label" parent="Background"]
offset_left = 449.0
offset_top = 445.0
offset_right = 642.0
offset_bottom = 468.0
text = "Volume click
"
metadata/_edit_use_anchors_ = true

[node name="VolumeClickBar" type="HSlider" parent="Background"]
offset_left = 449.0
offset_top = 478.0
offset_right = 639.0
offset_bottom = 494.0
size_flags_vertical = 1
mouse_filter = 1
mouse_force_pass_scroll_events = false
value = 100.0
metadata/_edit_use_anchors_ = true

[node name="WindowMode" type="Label" parent="Background"]
offset_left = 449.0
offset_top = 502.0
offset_right = 643.0
offset_bottom = 525.0
text = "Mode plein-écran
"

[node name="WindowModeList" type="OptionButton" parent="Background"]
offset_left = 449.0
offset_top = 532.0
offset_right = 641.0
offset_bottom = 563.0
item_count = 4
selected = 3
popup/item_0/text = "Fenêtré"
popup/item_0/id = 0
popup/item_1/text = "Minimisé"
popup/item_1/id = 1
popup/item_2/text = "Maximisé"
popup/item_2/id = 2
popup/item_3/text = "Plein-écran"
popup/item_3/id = 3
metadata/_edit_use_anchors_ = true

[node name="SaveButton" type="Button" parent="Background"]
offset_left = 870.0
offset_top = 720.0
offset_right = 1050.0
offset_bottom = 752.0
mouse_filter = 1
text = "Sauvegarder
"
metadata/_edit_use_anchors_ = true

[connection signal="drag_ended" from="Background/VolumeMusicBar" to="." method="_on_volume_music_changed"]
[connection signal="drag_ended" from="Background/VolumeClickBar" to="." method="_on_volume_click_changed"]
[connection signal="item_selected" from="Background/WindowModeList" to="." method="_on_window_mode_selected"]
[connection signal="button_down" from="Background/SaveButton" to="." method="_on_button_save_down"]
